# ds-u2-actividad-1-listasenlazadassimples-Roque31-y

./: CMakeLists.txt  DOXYGEN.md  Doxyfile.in  README.md  SensorSystem.cpp  SensorSystem.h  SensorSystem_new.h  main.cpp  main_new.cpp  serial_linux.cpp  serial_linux.h
docs/: mainpage.dox
docs/examples/: usage_example.cpp
doxygen_docs/: architecture.html  class_ListaSensor.html  class_SensorBase.html  class_SensorPresion.html  class_SensorTemperatura.html  classes.html  index.html  serial.html
doxygen_docs/assets/: style.css
